--- a/jackal_2dnav/param/costmap_common_params.yaml
+++ b/jackal_2dnav/param/costmap_common_params.yaml
@@ -1,41 +1,41 @@
-obstacle_range: 2.5
-raytrace_range: 3.0
-footprint: [[0.245, 0.215], [0.245, -0.215], [-0.245, -0.215], [-0.245, 0.215]]
-inflation_radius: 0.55
-
-observation_sources: laser_scan_sensor
-
-laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true}
-
 # obstacle_range: 2.5
 # raytrace_range: 3.0
 # footprint: [[0.245, 0.215], [0.245, -0.215], [-0.245, -0.215], [-0.245, 0.215]]
+# inflation_radius: 0.55
 
-# plugins:
-#     - {name: static_layer, type: "costmap_2d::StaticLayer"}
-#     - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
-#     - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
-# static_layer:
-#     unknown_cost_value: -1
-#     lethal_cost_threshold: 250
-#     map_topic: map
-#     first_map_only: false
-#     subscribe_to_updates: false
-#     track_unknown_space: true
-#     use_maximum: false
-#     trinary_costmap: false
-# obstacle_layer:
-#     observation_sources: laser_scan_sensor
-#     laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true, expected_update_rate: 0.2}
-#     track_unknown_space: true
-#     footprint_clearing_enabled: true
-#     combination_method: 0 # "Overwrite" (0), "Maximum" (1) and "Nothing" (99)
-# #    origin_z: 0.0
-# #    z_resolution: 0.05
-# #    z_voxels: 10
-# #    unknown_threshold: 10
-# #    mark_threshold: 0
-# #    publish_voxel_map: false
-# inflation_layer:
-#     inflation_radius: 0.35 # = gap corn row / 2, so that robot runs in the very center of the row
-#     cost_scaling_factor: 15.0 # the higher, the quicker the exp. cost function declines
+# observation_sources: laser_scan_sensor
+
+# laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true}
+
+obstacle_range: 2.5
+raytrace_range: 3.0
+footprint: [[0.245, 0.215], [0.245, -0.215], [-0.245, -0.215], [-0.245, 0.215]]
+
+plugins:
+    - {name: static_layer, type: "costmap_2d::StaticLayer"}
+    - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
+    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+static_layer:
+    unknown_cost_value: -1
+    lethal_cost_threshold: 250
+    map_topic: map
+    first_map_only: false
+    subscribe_to_updates: false
+    track_unknown_space: true
+    use_maximum: false
+    trinary_costmap: false
+obstacle_layer:
+    observation_sources: laser_scan_sensor
+    laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true, expected_update_rate: 0.2}
+    track_unknown_space: true
+    footprint_clearing_enabled: true
+    combination_method: 0 # "Overwrite" (0), "Maximum" (1) and "Nothing" (99)
+#    origin_z: 0.0
+#    z_resolution: 0.05
+#    z_voxels: 10
+#    unknown_threshold: 10
+#    mark_threshold: 0
+#    publish_voxel_map: false
+inflation_layer:
+    inflation_radius: 0.35 # = gap corn row / 2, so that robot runs in the very center of the row
+    cost_scaling_factor: 15.0 # the higher, the quicker the exp. cost function declines
