simple line following is and simple action goals is working in tiny state machine.

--- a/jackal_2dnav/param/costmap_common_params.yaml
+++ b/jackal_2dnav/param/costmap_common_params.yaml
@@ -1,14 +1,5 @@
-# obstacle_range: 2.5
-# raytrace_range: 3.0
-# footprint: [[0.245, 0.215], [0.245, -0.215], [-0.245, -0.215], [-0.245, 0.215]]
-# inflation_radius: 0.55
-
-# observation_sources: laser_scan_sensor
-
-# laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true}
-
-obstacle_range: 2.5
-raytrace_range: 3.0
+#obstacle_range: 2.5
+#raytrace_range: 3.0
 footprint: [[0.245, 0.215], [0.245, -0.215], [-0.245, -0.215], [-0.245, 0.215]]
 
 plugins:
@@ -26,7 +17,7 @@ static_layer:
     trinary_costmap: false
 obstacle_layer:
     observation_sources: laser_scan_sensor
-    laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true, expected_update_rate: 0.2}
+    laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true, expected_update_rate: 0.2, inf_is_valid: true}
     track_unknown_space: true
     footprint_clearing_enabled: true
     combination_method: 0 # "Overwrite" (0), "Maximum" (1) and "Nothing" (99)
