Added Virtual_Robot_Event again to src folder, added packages in package.xml of jackal_nav2d

--- a/jackal_2dnav/package.xml
+++ b/jackal_2dnav/package.xml
@@ -52,6 +52,9 @@
   <build_depend>move_base</build_depend>
   <build_export_depend>move_base</build_export_depend>
   <exec_depend>move_base</exec_depend>
+  <exec_depend>carrot_planner</exec_depend>
+  <exec_depend>global_planner</exec_depend>
+  <exec_depend>dwa_local_planner</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
