--- a/jackal_2dnav/param/base_global_planner_params.yaml
+++ b/jackal_2dnav/param/base_global_planner_params.yaml
@@ -6,14 +6,17 @@ GlobalPlanner:                                  # Also see: http://wiki.ros.org/
   
   allow_unknown: true                           # Allow planner to plan through unknown space, default true
                                                 # Needs to have track_unknown_space: true in the obstacle / voxel layer (in costmap_commons_param) to work
-  planner_window_x: 0.0                         # default 0.0
-  planner_window_y: 0.0                         # default 0.0
-  default_tolerance: 0.0                        # If goal in obstacle, plan to the closest point in radius default_tolerance, default 0.0
+  planner_window_x: 0.0                         # default 0.0, unused
+  planner_window_y: 0.0                         # default 0.0, unused
+  default_tolerance: 0.0                        # default 0.0, unused, If goal in obstacle, plan to the closest point in radius default_tolerance
   
   publish_scale: 100                            # Scale by which the published potential gets multiplied, default 100
-  planner_costmap_publish_frequency: 0.0        # default 0.0
+  planner_costmap_publish_frequency: 0.0        # default 0.0, unused
+  publish_potential: true                       # Publish Potential Costmap (this is not like the navfn pointcloud2 potential), default true
   
   lethal_cost: 253                              # default 253
-  neutral_cost: 50                              # default 50
-  cost_factor: 0.8                              # Factor to multiply each cost from costmap by, default 3.0
-  publish_potential: true                       # Publish Potential Costmap (this is not like the navfn pointcloud2 potential), default true
+  neutral_cost: 66                              # default 50
+  cost_factor: 0.55                             # Factor to multiply each cost from costmap by, default 3.0 
+
+  orientation_mode: 1                           # set the orientation the robot should have while undergoing the global plan, None=0, Forward=1, Interpolate=2, ForwardThenInterpolate=3, Backward=4, Leftward=5, Rightward=6
+  orientation_window_size: 1                    # alter to smooth the orientation calculation
