--- a/jackal_2dnav/param/costmap_common_params.yaml
+++ b/jackal_2dnav/param/costmap_common_params.yaml
@@ -1,32 +1,4 @@
-#obstacle_range: 2.5
-#raytrace_range: 3.0
-footprint: [[0.245, 0.215], [0.245, -0.215], [-0.245, -0.215], [-0.245, 0.215]]
-
-plugins:
-    - {name: static_layer, type: "costmap_2d::StaticLayer"}
-    - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
-    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
-static_layer:
-    unknown_cost_value: -1
-    lethal_cost_threshold: 250
-    map_topic: map
-    first_map_only: false
-    subscribe_to_updates: false
-    track_unknown_space: true
-    use_maximum: false
-    trinary_costmap: false
-obstacle_layer:
-    observation_sources: laser_scan_sensor
-    laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true, expected_update_rate: 0.2, inf_is_valid: true}
-    track_unknown_space: true
-    footprint_clearing_enabled: true
-    combination_method: 0 # "Overwrite" (0), "Maximum" (1) and "Nothing" (99)
-#    origin_z: 0.0
-#    z_resolution: 0.05
-#    z_voxels: 10
-#    unknown_threshold: 10
-#    mark_threshold: 0
-#    publish_voxel_map: false
-inflation_layer:
-    inflation_radius: 0.35 # = gap corn row / 2, so that robot runs in the very center of the row
-    cost_scaling_factor: 15.0 # the higher, the quicker the exp. cost function declines
+obstacle_range: 2.5       # The default maximum distance from the robot at which an obstacle will be inserted into the cost map in meters
+raytrace_range: 10.0      # The default range in meters at which to raytrace out obstacles from the map using sensor data
+max_obstacle_height: 0.5  # The maximum height of any obstacle to be inserted into the costmap in meters
+footprint: [[0.24, 0.225], [0.24, -0.225], [-0.24, -0.225], [-0.24, 0.225]] # jackal width: 0.43 --> 0.45, length: 0.46 --> 0.48
