--- a/jackal_2dnav/param/global_costmap_params.yaml
+++ b/jackal_2dnav/param/global_costmap_params.yaml
@@ -1,9 +1,27 @@
 global_costmap:
   global_frame: map
   robot_base_frame: base_link
-  update_frequency: 5.0 # The frequency in Hz for the map to be updated.  
+  update_frequency: 5.0 # [Hz]
+  publish_frequency: 2.0 # [Hz]
   static_map: true # true --> intialize costmap based on a map served by the map_server
   rolling_window: false # true --> costmap will remain centered around the robot as the robot moves through the world
   width: 10.0 # The width of the map in meters. 
   height: 10.0 # The height of the map in meters. 
   resolution: 0.05 # The resolution of the map in meters/cell.
+
+  plugins:
+    - {name: static_layer, type: "costmap_2d::StaticLayer"}
+    - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
+  static_layer:
+      unknown_cost_value: -1
+      lethal_cost_threshold: 253
+      map_topic: map
+      first_map_only: false
+      subscribe_to_updates: false
+      track_unknown_space: true
+      use_maximum: false
+      trinary_costmap: false
+  inflation_layer:
+      inflation_radius: 0.4 # = gap corn row / 2, so that robot runs in the very center of the row
+      cost_scaling_factor: 12.0 # the higher, the quicker the exp. cost function declines
+      inflate_unknown: false # inflate cells whose type is neither occupied nor free
